# ESP32_i2c_event_motorcontroller_and_sensorreading

can_motorcontroller/: CMakeLists.txt  README.md
can_motorcontroller/components/buoye_datatypes/: Kconfig.projbuild  RTC_manager.c  RTC_manager.h  buoye_structs.c  buoye_structs.h  json_helper.c  readme.md  serde_helper.c  serde_helper.h  set_data.c  set_data.h
can_motorcontroller/components/can_bus_manager/: CMakeLists.txt  Kconfig.projbuild  README.md  can_bus_manager.c
can_motorcontroller/components/can_motctrl/: CMakeLists.txt  Kconfig.projbuild  can_motctrl.c  can_motctrl_common.c  can_motctrl_config.c  can_motctrl_debug.c  can_serde_helper.c
can_motorcontroller/components/can_motctrl_manager/: CMakeLists.txt  can_motctrl_manager.c
can_motorcontroller/components/can_motctrl_worker/: CMakeLists.txt  can_motctrl_worker.c
can_motorcontroller/components/motorcontroller_manager/: CMakeLists.txt  motorcontroller_manager.c
can_motorcontroller/components/motorcontroller_worker/: CMakeLists.txt  Kconfig.projbuild  README.md  inputs.c  motorcontroller_worker.c  outputs.c  state_winch_temp.c  timer.c  winch_controller.c
can_motorcontroller/components/motorcontroller_worker/include/: gpio_config.h  inputs.h  motorcontroller_worker.h  outputs.h  timer.h  winch_controller.h
can_motorcontroller/main/: CMakeLists.txt  can_motctrl_test.c  main.c
can_motorcontroller/main/include/: can_motctrl_test.h
i2c_motorcontroller/components/buoye_datatypes/: CMakeLists.txt  RTC_manager.c  RTC_manager.h  buoye_structs.c  buoye_structs.h  json_helper.h  serde_helper.c  serde_helper.h
i2c_motorcontroller/components/i2c_master_manager/: CMakeLists.txt  Kconfig.projbuild  (+1 more)
i2c_motorcontroller/main/: CMakeLists.txt  main.c
twai_network_slave/: sdkconfig  sdkconfig.old
(+19 files in other folders)
